# Sirius_Ice

./: README.md
AniLibs/Ani3D/ani3D-3.1/src/Tutorials/MultiPackage/StokesNavier/: CMakeLists.txt  Makefile  forlibfem.f  forlibinb.f  main.f
AniLibs/Ani3D/ani3D-3.1/src/Tutorials/PackageAFT/: CMakeLists.txt  Makefile  main_cad.c
AniLibs/Ani3D/ani3D-3.1/src/Tutorials/PackageC2F/: CMakeLists.txt  Makefile
AniLibs/Ani3D/ani3D-3.1/src/Tutorials/PackageFEM/: CMakeLists.txt  Makefile  main_bc.f  main_simple.f  main_template.f  main_tetrahedron.f
AniLibs/Ani3D/ani3D-3.1/src/Tutorials/PackageMBA/: CMakeLists.txt  Makefile  README  main_fixshape.f  main_nodal.f  main_read_aft_mesh.f  main_split_unite.f
AniLibs/Ani3D/ani3D-3.1/src/Tutorials/PackagePRJ/: CMakeLists.txt  Makefile  README  gmvM.attr  gmvU.attr  main.f
AniLibs/Ani3D/ani3D-3.1/src/aniAFT/src/aniTET/: CMakeLists.txt  Makefile  aft2d.c  check.c
AniLibs/Ani3D/ani3D-3.1/src/aniFEM/: CMakeLists.txt  Makefile  algebra.f  assemble.f  assemble.fd  dof.f  fem3Derr.f  fem3Dface.f  fem3Dsub.f  fem3Dtet.f  fem3Dtet.fd  fem3Dtri.f  forlibfem.f  isys.f  opDIV.f  opDUDX.f  opGRAD.f  opIDEN.f  template.f
AniLibs/Ani3D/ani3D-3.1/src/aniLMR/: CMakeLists.txt  EdgeEst2GradMetricMAX.f  EdgeEst2MetricMAX.f  Lp_norm.f  Makefile  utils.f
AniLibs/Ani3D/ani3D-3.1/src/aniMBA/: CMakeLists.txt  E2F.f  F2E.f  Makefile  ZZ.f  ani2.f  auxSE.f  auxSF.f  auxSP.f  auxSR.f  checks.f  collapse_edge.f  datacopy.f  delete_point.f  insrtP.f  isnan.c  list.f  list_dbg.f  loadM.f  magic.fd  makM.f  makQ.f  mba_analytic.f  mba_fixshape.f  mba_nodal.f  minim.f  missing.f  move_point.f  nlnfnc.f  output.f  refine.f  swapR.f  tangled.f  tetrahedron.f  time.c  triangle.f  utils.f  utils_add.f
AniLibs/Ani3D/ani3D-3.1/src/cgm/: CGMConfig.cmake.in  CMakeLists.txt  Makefile-ani3D  Makefile.am  Makefile.in  README  aclocal.m4  cgm_version.h  config.h.in  configure  configure.ac
AniLibs/Ani3D/ani3D-3.1/src/cgm/autom4te.cache/: output.0  requests  traces.0
AniLibs/Ani3D/ani3D-3.1/src/cgm/compat/: Makefile.in
AniLibs/Ani3D/ani3D-3.1/src/cgm/doc/: cgm.dox.in
AniLibs/Ani3D/ani3D-3.1/src/cgm/geom/: AnalyticGeometryTool.cpp  AnalyticGeometryTool.hpp  AutoMidsurfaceTool.cpp  BasicTopologyEntity.cpp  BasicTopologyEntity.hpp  Body.hpp  BodySM.hpp  BoundingBoxTool.cpp  BoundingBoxTool.hpp  BridgeManager.cpp  BridgeManager.hpp  CAActuateSet.cpp  CAActuateSet.hpp  CADeferredAttrib.cpp  CADeferredAttrib.hpp  CAEntityColor.cpp  CAEntityId.cpp  CAEntityName.cpp  CAEntitySense.cpp  CAEntitySense.hpp  CAEntityTol.hpp  CAGroup.cpp  CAMergeStatus.cpp  CASourceFeature.cpp  CGMApp.cpp  CGMConfigure.h.in  CGMEngineDynamicLoader.cpp  CGMEngineDynamicLoader.hpp  CGMHistory.cpp  CMakeLists.txt  Chain.cpp  CoEdge.cpp  CoEdge.hpp  CoFace.cpp  CoFace.hpp  CubitAttribManager.cpp  CubitAttribManager.hpp  CubitAttribUser.cpp  CubitCompat.cpp  CubitEvaluator.hpp  (+74 more)
AniLibs/Ani3D/ani3D-3.1/src/cgm/init/: CMakeLists.txt  CgmaInitConfigure.h.in  InitCGMA.cpp  InitCGMA.hpp  Makefile.am  Makefile.in
AniLibs/Ani3D/ani3D-3.1/src/cgm/itaps/: CATag.cpp  CATag.hpp  CGM_iGeom.h  CMakeLists.txt  CgmaIGeomConfigure.h.in  Makefile.am  Makefile.in  iGeom.h  iGeom_CGMA.cc  mergetest.cc  partest.cpp  size.step  test_edge_orient.cc  testgeom.cc  voltest.sat  voltest.stp
AniLibs/Ani3D/ani3D-3.1/src/cgm/m4/: compiler.m4
AniLibs/Ani3D/ani3D-3.1/src/cgm/test/: AngleCalc.cpp  Makefile.am  Makefile.in  attribute_to_file.cpp  brick.cpp  cylinders.cpp  edgeFaceSense.cpp  export_acis.cpp  groups-saved-to-OCC.cxx  imprint_bug.cpp  loft.cpp  makept.cpp  merge_test.cpp  modify.cpp  offset_curves.cpp  operation.cpp  point_project.cpp  raySurfaceInt.cpp  section.cpp  spheres.cpp  split_circle.cpp  test_stl.cpp  unit_cube.stl
AniLibs/Ani3D/ani3D-3.1/src/cgm/util/: AllocMemManagersList.cpp  AppUtil.cpp  AppUtil.hpp  ArrayBasedContainer.cpp  ArrayBasedContainer.hpp  CCubitFile.cpp  CCubitFile.hpp  CMakeLists.txt  CastTo.hpp  CpuTimer.cpp  CpuTimer.hpp  CubitBox.cpp  CubitBox.hpp  CubitColor.cpp  CubitColor.hpp  CubitCoordEvent.hpp  CubitCoordinateSystem.cpp  CubitCoordinateSystem.hpp  CubitDefines.h  CubitDirIterator.cpp  CubitDirIterator.hpp  CubitDynamicLoader.cpp  CubitEntity.cpp  CubitEntity.hpp  CubitEvent.cpp  CubitEvent.hpp  CubitEventDispatcher.cpp  CubitFile.cpp  CubitFile.hpp  CubitFileFEModel.cpp  CubitFileIOWrapper.cpp  CubitFileIOWrapper.hpp  CubitFileMetaData.cpp  CubitFileMetaData.hpp  CubitFileSimModel.cpp  CubitFileUtil.cpp  CubitFileUtil.hpp  CubitInputFile.hpp  CubitInstrumentation.hpp  CubitMatrix.cpp  (+47 more)
AniLibs/Ani3D/ani3D-3.1/src/lapack/: CMakeLists.txt  Makefile
Problem1/: Problem1.pptx  (+1 more)
Problem1/2_square_pmf_generation/: CMakeLists.txt  README.md  config.txt  main.cpp
Problem1/3_sphere_tetration/: CMakeLists.txt  README.md  main.c
Problem2/Src/: Advection.cpp  Advection.h  Assembling.cpp  Assembling.h  CMakeLists.txt  Errors.cpp  Errors.h  FCT.cpp  FCT.h  Function.cpp  Function.h  INMOST_ICE_mesh.cpp  INMOST_ICE_mesh.h  Initialization.cpp  Initialization.h  MatVec.cpp  MatVec.h  Numerical.cpp  Numerical.h  config.h  main.cpp
Problem3/Src/: CMakeLists.txt  main.cpp
Problem3/Src/Advection/: CMakeLists.txt  advection.cpp  advection_assembling.cpp  fct.cpp
Problem3/Src/Configuration/: CMakeLists.txt  advection_config.cpp  config.cpp  dynamics_test_config.cpp  mesh_config.cpp  model_config.cpp  momentum_config.cpp  output_config.cpp
Problem3/Src/DynamicsTest/: CMakeLists.txt  dynamics_test.cpp
Problem3/Src/Headers/: CMakeLists.txt  INMOST_ICE.h  advection.h  advection_assembling.h  config.h  coords_rotation.h  dynamics_test.h  enum_classes.h  errors.h  external.h  fct.h  forcing_link_tables.h  function.h  interpolation.h  mat_vec.h  mesh.h  momentum.h  momentum_assembling.h  numerical_integration.h  string_trim.h
Problem3/Src/Mesh/: CMakeLists.txt  interpolation.cpp  mesh.cpp
Problem3/Src/Momentum/: CMakeLists.txt  momentum.cpp  momentum_assembling.cpp
Problem3/Src/Service/: CMakeLists.txt  errors.cpp  function.cpp  mat_vec.cpp  numerical_integration.cpp  string_trim.cpp
(+343 files in other folders)
